testsuite/tests/th/TH_Promoted1Tuple.stderr

TH_Promoted1Tuple.hs:7:2: error:
    Illegal type: ‘'Solo Int’ Perhaps you intended to use DataKinds
